PS-16 - Basket and registration form placement

--- a/webapp/web/css/menu_style.css
+++ b/webapp/web/css/menu_style.css
@@ -8,6 +8,7 @@
 	-moz-box-shadow:inset 0px 0px 1px #edf9ff;
 	-webkit-box-shadow:inset 0px 0px 1px #edf9ff;
 	box-shadow:inset 0px 0px 1px #edf9ff;
+	margin-top: 20px;
 }
 
 #menu-list {
