--- a/webapp/web/css/style.css
+++ b/webapp/web/css/style.css
@@ -4,14 +4,37 @@ body {
 	font: 12px Arial, Verdana, Tahoma, sans-serif;
 }
 								/*Header*/
-.header {	
-	height: 100px;
+.top-menu {
+	width: 100%;
+	height: 30px;
+	background-color: #026B9D;
+}
+
+.top-menu-list li{
+	color: white;
+	float: left;
+	padding-left: 26px;
+	margin-right: 30px;
+	line-height: 30px;
+	list-style: none;
+}
+
+.top-menu-list li:first-child {
+	margin-left: 40px;
+}
+
+.top-menu-list .delivery-icon li {
+	background: url(../img/delivery.png) no-repeat 10px 11px;
+}
+
+.header {
+	height: 130px;
 }
 
 .logo {
 	width: 178px;
 	height: 54px;
-	margin: 23px 0 0 20px;
+	margin: 33px 0 0 20px;
 	float: left;
 }
 
@@ -36,9 +59,12 @@ body {
 								/*Log In form*/
 
 .login {
-	width:320px;
+	width: 200px;
 	float: right;
-	margin: 5px 20px 0 0;
+	margin: 5px 5px 0 0;
+	border: 1px solid #0F84CB;
+	border-radius: 5px;
+	padding: 5px 5px;
 }
 
 .field {
@@ -60,14 +86,16 @@ label {
 
 .loginform {
 	float: left;
-	margin-right: 5px;
 }
 
 .login a {
 	text-decoration: none;
 	border-bottom: 1px dashed #0270A3;
 	color: #0270A3;
-	margin-bottom: 5px;
+}
+
+#forg-pass-link {
+	float: right;
 }
 
 .login span {
@@ -171,11 +199,19 @@ label {
 
 .log-reg-buttons {
 	height: 25px;
-	border: 1px solid #0d679d;
+	border: 1px solid #026B9D;
 	border-radius: 5px;
 	color: #ffffff;
-	background-color: #0f84cb;
-	margin: 5px;
+	background-color: #026B9D;
+	margin-top: 5px;
+	margin-left: 65px;
+	width: 75px;
+}
+
+.field input {
+	width: 135px;
+	border-radius: 5px;
+	padding-left: 5px;
 }
 
 .log-reg-buttons:hover {
@@ -184,33 +220,31 @@ label {
 }
 									/*Language switcher*/
 .lang-switcher {
-	height: 40px;
-	width: 130px;
+	height: 30px;
+	width: 85px;
 	position: relative;
+	float: right;
 }
 
 .lang-switcher #resultpic {
 	float: left;
 	width: 24px;
 	height: 24px;
-	margin-left: 5px;
 	position: absolute;
-	top: 8px;
+	top: 3px;
 	left: 7px;
 }
 
 .lang-switcher select {
-	height: 28px;
-	margin: 6px 0 0 6px;
+	height: 30px;
 	width: 85px;
-	border-radius: 5px 0 0 5px;
 	padding-left: 30px;
 	background: #026B9D;
 	background-image: url(../img/arrow.png);
 	background-repeat: no-repeat;
 	background-position: 90% 50%;
+	border: none;
 	color: white;
-	border: 1px solid black;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	text-indent: 0.01px;
