--- a/webapp/web/css/style.css
+++ b/webapp/web/css/style.css
@@ -13,18 +13,38 @@ body {
 .top-menu-list li{
 	color: white;
 	float: left;
-	padding-left: 26px;
+	padding-left: 30px;
 	margin-right: 30px;
 	line-height: 30px;
 	list-style: none;
 }
 
-.top-menu-list li:first-child {
-	margin-left: 40px;
+.top-menu-list li:hover{
+	text-decoration: underline;
 }
 
-.top-menu-list .delivery-icon li {
-	background: url(../img/delivery.png) no-repeat 10px 11px;
+.top-menu-list li:first-child {
+	margin-left: 17px;
+}
+
+.delivery-icon li {
+	background: url(../img/delivery.png) no-repeat 0px 3px;
+}
+
+.payment-icon li {
+	background: url(../img/payment.png) no-repeat 4px 5px;
+}
+
+.about_us-icon li {
+	background: url(../img/about_us.png) no-repeat 4px 5px;
+}
+
+.our_stores-icon li {
+	background: url(../img/stores.png) no-repeat 4px 5px;
+}
+
+.contacts-icon li {
+	background: url(../img/contacts.png) no-repeat 4px 5px;
 }
 
 .header {
