--- a/webapp/web/css/pers_cabinet.css
+++ b/webapp/web/css/pers_cabinet.css
@@ -25,6 +25,7 @@
 	margin: 0px 0 10px 10px;
 	border-radius: 5px;
 	text-align: center;
+	cursor: pointer;
 	border: 1px solid #012739;
 	background: #014464;
 	background: -moz-linear-gradient(bottom, #0272a7, #013953);
@@ -40,6 +41,10 @@
 	display: table-cell;
 	height: 42px;
 	width: 152px;
+}
+
+.hiddenButton{
+	display: none;
 }
 
 .pers_cabinet_btn:hover {
