--- a/webapp/web/css/style.css
+++ b/webapp/web/css/style.css
@@ -7,8 +7,61 @@ body {
 	width: 100%;
 }
 								/*Header*/
+								/*top-menu*/
+.top-menu {
+	width: 100%;
+	height: 35px;
+	background-color: #026B9D;
+}
+
+.top-menu-list li{
+	color: white;
+	float: left;
+	padding-left: 30px;
+	margin-right: 30px;
+	line-height: 35px;
+	list-style: none;
+}
+
+.top-menu-list li:hover{
+	text-decoration: underline;
+}
+
+.top-menu-list li:first-child {
+	margin-left: 17px;
+}
+
+.delivery-icon li {
+	background: url(../img/delivery.png) no-repeat 0px 3px;
+}
+
+.payment-icon li {
+	background: url(../img/payment.png) no-repeat 4px 5px;
+}
+
+.about_us-icon li {
+	background: url(../img/about_us.png) no-repeat 4px 5px;
+}
+
+.our_stores-icon li {
+	background: url(../img/stores.png) no-repeat 4px 5px;
+}
+
+.contacts-icon li {
+	background: url(../img/contacts.png) no-repeat 4px 5px;
+}
+
+#main_login_btn {
+	font-size:1.2em;
+	padding:0.2em 0.3em;
+	font-weight: normal;
+	float: right;
+	margin-top: 7px;
+	margin-right: 15px;
+}
+
 .header {	
-	height: 100px;
+	height: 140px;
 	background: #E6E6E6 none repeat scroll 0% 0%;
 	border-bottom: 1px solid #BFBFBF;
 }
@@ -44,6 +97,20 @@ body {
 
 								/*Log In form*/
 
+.hidden_login {
+	display: none;
+}
+
+.loginform {
+	padding: 40px 20px  15px  20px;
+	background-color: #eee;
+	border: 2px solid #0f84cb;
+	border-radius: 10px;
+	max-width: 225px;
+	position: relative;
+	margin: auto;
+}
+
 .login {
 /* 	width:320px; */
 	display: table-row;
@@ -52,12 +119,6 @@ body {
 	height: 90px;
 /* 	margin: 5px 20px 0 0; */
 }
-.loginform {
-	float: left;
-	margin-right: 5px;
-}
-
-
 
 .login li {
 	float: right;
@@ -65,9 +126,28 @@ body {
 	height: 90px;
 }
 
+.loginlink a{
+	color: #026B9D;
+	margin-right: 5px;
+	text-decoration: none;
+}
+
+.loginlink a:hover{
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+#reg-link {
+	float: right;
+}
 
 .loginform input {
 	height: 30px;
+	border-radius: 5px;
+}
+
+#login_popup_btn {
+	margin: 10px 0 0 63px;
 }
 
 #trueloginButton{
@@ -75,10 +155,6 @@ body {
 }
 .ButtonBlok{
 	width: 150px;
-}
-
-.loginlink{
-	margin-top: 5px;
 }
 
 .loginblock{
@@ -108,6 +184,7 @@ input.loginButton {
   -webkit-animation: pulsate 1.2s linear infinite;
   animation: pulsate 1.2s linear infinite;
 }
+
 input.loginButton:hover {
   -webkit-animation-play-state: paused;
   animation-play-state: paused;
@@ -180,16 +257,16 @@ input.loginButton:active {
 	float: left;
 	width: 65px;
 	text-align: left;
+	font-size: 1.3em;
 }
 
 .customfield {
 	text-align: left;
 	line-height: 25px;
 	padding-left: 10px;
-	margin-bottom: 5px;
 }
 .customfield input{
-	margin: 0px 10px 0px 70px;
+	margin: -1px 5px 0px -10px;
 	height: 25px;
 	float: left;
 }
@@ -331,36 +408,31 @@ input.loginButton:active {
 }
 									/*Language switcher*/
 .lang-switcher {
-	height: 50px;
-	width: 130px;
-	float: left;
-}
-#lang_form{
+	height: 30px;
+	width: 85px;
 	position: relative;
-	margin-top: 5px;
+	float: right;
 }
 
 .lang-switcher #resultpic {
+	float: left;
 	width: 24px;
 	height: 24px;
-	margin-left: 5px;
 	position: absolute;
-	top: 8px;
+	top: 3px;
 	left: 7px;
 }
 
 .lang-switcher select {
-	height: 28px;
-	margin: 6px 0 0 6px;
+	height: 30px;
 	width: 85px;
-	border-radius: 5px 0 0 5px;
 	padding-left: 30px;
 	background: #026B9D;
 	background-image: url(../img/arrow.png);
 	background-repeat: no-repeat;
 	background-position: 90% 50%;
+	border: none;
 	color: white;
-	border: 1px solid black;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	text-indent: 0.01px;
@@ -377,7 +449,7 @@ input.loginButton:active {
 	margin-left: -3px;
 	cursor: pointer;
 }
-									/*Goods box*/
+											/*Goods box*/
 .good-box {
 	width: 200px;
 	height: 270px;
@@ -403,3 +475,4 @@ input.loginButton:active {
 .good-box img {
 	margin: 10px auto;
 }
+
