--- a/webapp/web/css/style.css
+++ b/webapp/web/css/style.css
@@ -45,12 +45,9 @@ body {
 								/*Log In form*/
 
 .login {
-/* 	width:320px; */
-	display: table-row;
 	float: right;
 	padding: 5px;
 	height: 90px;
-/* 	margin: 5px 20px 0 0; */
 }
 .loginform {
 	float: left;
@@ -59,7 +56,7 @@ body {
 
 
 
-.login li {
+.headerline {
 	float: right;
 	margin-right: 30px;
 	height: 90px;
